spacing fixed

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
     width: 100%;
     margin: 0 auto;
     background-color: rgb(44, 44, 44);
-    height: 500px;
+    height: 550px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,25 +42,38 @@ body{
 }
 
 .choose-page{
-    margin: 60px auto;
+    margin: 10px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 500px;
-    justify-content: center;
+    height: 610px;
 }
 
     .classes{
         font-family: 'VT323', monospace;
         color: white;
-        margin-bottom: 50px;
+        margin-bottom: 15px;
         font-size: 24px;
     }
+
+    .points{
+        display: flex;
+        margin-top: 20px;
+        justify-content: space-between;
+    }
+
+        .points_team{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+            #TR-points{}
+            #A-points{}
 
     .btn{
         display: flex;
         flex-direction: column;
-        margin-bottom: 50px;
+        margin-bottom: 30px;
         height: 240px;
     }
 
@@ -118,6 +131,10 @@ body{
             font-family: 'VT323', monospace;
             font-size: 18px;
         }
+
+        #computer img{
+            width: 80px;
+        }
     
     .result{}
         #resultado{
@@ -125,6 +142,10 @@ body{
             font-family: 'VT323', monospace;  
             font-size: 22px;          
         }
+
+    .last{
+        margin: 15px 0;
+    }
 
 @media (min-width: 768px){
     .btn{
